--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AGENTISS — Atendentes de IA & Landing Pages</title>
+    <title>AGENTISS — Agentes de IA & Landing Pages</title>
     <meta name="description" content="Agentes de IA que vendem 24/7. Marque consultas, qualifique leads e integre WhatsApp, Instagram e Facebook. Landing Pages que convertem." />
     <meta name="author" content="AGENTISS" />
     <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot, landing page, IA" />
