refactor: rename 'Atendentes de IA' to 'Agentes de IA'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="AGENTISS" />
     <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot, landing page, IA" />
 
-    <meta property="og:title" content="AGENTISS — Atendentes de IA & Landing Pages" />
+    <meta property="og:title" content="AGENTISS — Agentes de IA & Landing Pages" />
     <meta property="og:description" content="Atendimento 24/7 com marcação de consultas e LPs que convertem." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
