--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AGENTISS — Agentes de IA & Landing Pages</title>
     <meta name="description" content="Agentes de IA que vendem 24/7. Marque consultas, qualifique leads e integre WhatsApp, Instagram e Facebook. Landing Pages que convertem." />
-    <meta name="author" content="AGENTISS" />
-    <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot, landing page, IA" />
+      <meta name="author" content="AGENTISS" />
+      <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot, landing page, IA" />
 
-    <meta property="og:title" content="AGENTISS — Agentes de IA & Landing Pages" />
-    <meta property="og:description" content="Atendimento 24/7 com marcação de consultas e LPs que convertem." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+      <link rel="canonical" href="https://www.seudominio.com/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@agentiss" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+      <meta property="og:title" content="AGENTISS — Agentes de IA & Landing Pages" />
+      <meta property="og:description" content="Atendimento 24/7 com marcação de consultas e LPs que convertem." />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+      <meta property="og:locale" content="pt_BR" />
+
+      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:site" content="@agentiss" />
+      <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    </head>
 
   <body>
     <div id="root"></div>
