Resolve index meta conflict

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AGENTISS — Agentes de IA & Landing Pages</title>
-    <meta name="description" content="Agentes de IA que vendem 24/7. Marque consultas, qualifique leads e integre WhatsApp, Instagram e Facebook. Landing Pages que convertem." />
+    <title>AGENTISS — Agentes de IA (Atendimento 24/7) & Landing Pages</title>
+    <meta name="description" content="Agentes de IA no WhatsApp, Instagram e Facebook: tiram dúvidas, marcam/confirmam consultas e qualificam leads. Também criamos Landing Pages que direcionam para as redes e aumentam conversões." />
       <meta name="author" content="AGENTISS" />
-      <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot, landing page, IA" />
+      <meta name="keywords" content="atendimento automático, atendente virtual, agendamento WhatsApp, chatbot Instagram, chatbot Facebook, landing page, captação de leads" />
 
       <link rel="canonical" href="https://www.seudominio.com/" />
 
