feat: add organization and services JSON-LD

--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@agentiss" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "AGENTISS",
+        "url": "https://agentiss.com.br",
+        "logo": "https://agentiss.com.br/logo.png",
+        "sameAs": [
+          "https://www.instagram.com/agentiss",
+          "https://www.facebook.com/agentiss"
+        ],
+        "makesOffer": [
+          {
+            "@type": "Service",
+            "name": "Agentes de IA",
+            "description": "Atendimento automático 24/7 com marcação de consultas."
+          },
+          {
+            "@type": "Service",
+            "name": "Landing Pages",
+            "description": "Páginas que convertem e capturam leads qualificados."
+          }
+        ]
+      }
+    </script>
   </head>
 
   <body>
